# Early-CVD-Prediction

./: .dvcignore  .gitignore  README.md  dvc.yaml  generate_reports.bat  pyproject.toml  requirements.txt  run_app.bat  run_tests.bat  train_project.bat
.github/workflows/: ci.yml
artifacts/: model_bundle.joblib  model_metadata.json
configs/: default.yaml
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  current_work_audit.md  data_audit_report.md  leakage_audit_report.md  ml_lab_requirement_check.md  proposal_alignment.md  proposal_alignment_and_notebook_compatibility.md
notebooks/: Early_CVD_Prediction_ML_Lab.ipynb  Early_CVD_Prediction_ML_Lab_Supervisor_Demo.ipynb  Heart_Disease_Prediction_03_SmallSet_Feat_Eng_NeuralNet_ModDef_Training-Copy1.ipynb  README.md
reports/: final_executive_summary.md  model_card.md
reports/manuscript/: early_cvd_ieee_lab_report.docx  ieee_ml_lab_report.md  manuscript_draft.md  structured_abstract.md
reports/supplementary/: supplementary_materials.md
reports/tables/: bootstrap_confidence_intervals.csv  center_metrics.csv  class_by_center.csv  comprehensive_model_comparison.csv  cross_validation_detailed.csv  data_dictionary.csv  decision_curve.csv  delong_pairwise.csv  duplicate_audit.csv  duplicate_sensitivity.csv  feature_correlation_matrix.csv  friedman_test.csv  global_feature_importance.csv  hyperparameter_summary.csv  inner_model_selection.csv  mcnemar_pairwise.csv  model_comparison.csv  model_selection_ranking.csv  (+7 more)
tests/: test_api_contract.py  test_data_loading.py  test_metrics.py  test_validation.py
(+32 files in other folders)
