[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "early-cvd-prediction"
version = "0.1.0"
description = "Leakage-audited, site-aware early cardiovascular disease prediction benchmark and localhost prototype."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110,<1",
  "jinja2>=3.1,<4",
  "joblib>=1.3,<2",
  "matplotlib>=3.8,<4",
  "mlflow>=2.12,<3",
  "numpy>=1.26,<3",
  "scipy>=1.12,<2",
  "pandas>=2.2,<3",
  "pydantic>=2.6,<3",
  "pyyaml>=6,<7",
  "scikit-learn>=1.4,<2",
  "seaborn>=0.13,<1",
  "shap>=0.45,<1",
  "tabulate>=0.9,<1",
  "typer>=0.12,<1",
  "uvicorn[standard]>=0.29,<1",
  "imbalanced-learn>=0.12,<1",
  "xgboost>=2.0,<3",
  "lightgbm>=4.0,<5",
  "catboost>=1.2,<2",
  "optuna>=3.5,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "httpx>=0.27,<1",
]

[project.scripts]
early-cvd = "interfaces.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
